Closed
Bug 1196403
Opened 10 years ago
Closed 10 years ago
[e10s] Firefox x64 does not work on Windows 10 Build 10525
Categories
(Core :: Security: Process Sandboxing, defect)
Tracking
()
RESOLVED
FIXED
mozilla43
People
(Reporter: kapranov98, Assigned: m_kato)
References
Details
Attachments
(1 file)
|
4.56 KB,
patch
|
bobowen
:
review+
ritu
:
approval-mozilla-aurora+
ritu
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; WOW64; rv:40.0) Gecko/20100101 Firefox/40.0
Build ID: 20150812163655
Steps to reproduce:
Firefox x64 does not work on Windows 10 Build 10525. Do not load a page in the multiprocessor mode. Tested on Nightly 43.0a1 x64.
Updated•10 years ago
|
Comment 1•10 years ago
|
||
Looks related to the new memory thing. 64bit chrome is affected by this (crashes upon launch).
Will do more testing tomorrow.
| Assignee | ||
Comment 2•10 years ago
|
||
This is only e10s.
tracking-e10s:
--- → ?
Summary: Firefox x64 does not work on Windows 10 Build 10525 → [e10s] Firefox x64 does not work on Windows 10 Build 10525
Comment 3•10 years ago
|
||
(In reply to Tim Nguyen [:ntim] (mostly away until 26 August) from comment #1)
> the new memory thing
Can you expand on this?
Flags: needinfo?(ntim.bugs)
Comment 4•10 years ago
|
||
Announcement: https://blogs.windows.com/bloggingwindows/2015/08/18/announcing-windows-10-insider-preview-build-10525/
Memory Manager Improvements:
In Windows 10, we have added a new concept in the Memory Manager called a compression store, which is an in-memory collection of compressed pages. This means that when Memory Manager feels memory pressure, it will compress unused pages instead of writing them to disk. This reduces the amount of memory used per process, allowing Windows 10 to maintain more applications in physical memory at a time. This also helps provide better responsiveness across Windows 10. The compression store lives in the System process’s working set. Since the system process holds the store in memory, its working set grows larger exactly when memory is being made available for other processes. This is visible in Task Manager and the reason the System process appears to be consuming more memory than previous releases.
Comment 5•10 years ago
|
||
(In reply to :Gijs Kruitbosch from comment #3)
> (In reply to Tim Nguyen [:ntim] (mostly away until 26 August) from comment
> #1)
> > the new memory thing
>
> Can you expand on this?
See comment 4
Flags: needinfo?(ntim.bugs)
(In reply to Brad Lassey [:blassey] (use needinfo?) from comment #6)
> can you retest on the latest win10 build?
That *is* the latest Win10 build.
(In reply to Brad Lassey [:blassey] (use needinfo?) from comment #6)
> can you retest on the latest win10 build?
10525 - the latest build for Windows Insider...
Flags: needinfo?(kapranov98)
Comment 10•10 years ago
|
||
Will switch tool chain to Visual studio 2015 solve this problem? Can you test building a x64 build with VS 2015 and enable e10s, Brian?
Flags: needinfo?(brian)
Comment 11•10 years ago
|
||
Updated•10 years ago
|
status-firefox42:
--- → ?
status-firefox43:
--- → ?
Comment 12•10 years ago
|
||
Relates to content sandboxing. Changing build tool will do nothing to this bug.
Flags: needinfo?(brian)
| Assignee | ||
Comment 13•10 years ago
|
||
| Assignee | ||
Updated•10 years ago
|
Component: Untriaged → Security: Process Sandboxing
Product: Firefox → Core
| Assignee | ||
Comment 14•10 years ago
|
||
Assignee: nobody → m_kato
| Assignee | ||
Updated•10 years ago
|
Attachment #8652152 -
Flags: review?(jld)
| Assignee | ||
Updated•10 years ago
|
| Assignee | ||
Updated•10 years ago
|
Attachment #8652152 -
Attachment description: Apply crbug/52201 → Apply crbug/522201
Comment 15•10 years ago
|
||
Comment on attachment 8652152 [details] [diff] [review]
Apply crbug/522201
Review of attachment 8652152 [details] [diff] [review]:
-----------------------------------------------------------------
Thanks for picking this up and applying this fix.
Would you also add a line to the following file, where we track the version of chromium files we've taken:
mozilla-central/security/sandbox/moz-chromium-commit-status.txt
Attachment #8652152 -
Flags: review?(jld) → review+
Comment 16•10 years ago
|
||
Comment 17•10 years ago
|
||
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
Comment 18•10 years ago
|
||
I don't know why but I just can't open Firefox with plugin-container enabled. So the patch don't work for me. The problem seems happen suddenly when I found I can't load flash plugin under none-e10s mode before this patch landed.
Comment 19•10 years ago
|
||
(In reply to leichixian from comment #18)
> I don't know why but I just can't open Firefox with plugin-container
> enabled. So the patch don't work for me. The problem seems happen suddenly
> when I found I can't load flash plugin under none-e10s mode before this
> patch landed.
Are you still seeing this problem?
Flags: needinfo?(leichixian)
Comment 20•10 years ago
|
||
(In reply to Bob Owen (:bobowen) (on PTO) from comment #19)
> (In reply to leichixian from comment #18)
> > I don't know why but I just can't open Firefox with plugin-container
> > enabled. So the patch don't work for me. The problem seems happen suddenly
> > when I found I can't load flash plugin under none-e10s mode before this
> > patch landed.
>
> Are you still seeing this problem?
Nope, now with this patch Nightly x64 build work properly under my Windows 10 build 10532.
Flags: needinfo?(leichixian)
Comment 21•10 years ago
|
||
(In reply to leichixian from comment #20)
> (In reply to Bob Owen (:bobowen) (on PTO) from comment #19)
> > (In reply to leichixian from comment #18)
> > Are you still seeing this problem?
>
> Nope, now with this patch Nightly x64 build work properly under my Windows
> 10 build 10532.
Great, thanks.
I'd imagine this would cause a problem for any sanboxed process and therefore flash on 64-bit.
So assuming that this fixed the issue and hasn't caused any new ones, I think we should get this uplifted to Aurora and then Beta.
Makoto, would you ask for uplift please.
Flags: needinfo?(m_kato)
Comment 22•10 years ago
|
||
We need to uplift, but no need to be hurry, as e10s is not default on in beta now and I don't think it will be tuned on default until the end of this year.
Comment 23•10 years ago
|
||
(In reply to leichixian from comment #22)
> We need to uplift, but no need to be hurry, as e10s is not default on in
> beta now and I don't think it will be tuned on default until the end of this
> year.
Given its nature, I think this would affect any sandboxed process and we currently have the NPAPI process sandboxed for 64-bit on Beta.
| Assignee | ||
Comment 24•10 years ago
|
||
Comment on attachment 8652152 [details] [diff] [review]
Apply crbug/522201
Approval Request Comment
[Feature/regressing bug #]:
N/A
[User impact if declined]:
Sandbox of Firefox doesn't work in Windows 10 insider build (build 10525) correctly.
[Describe test coverage new/current, TreeHerder]:
Laned m-c
[Risks and why]:
Too low. Added service hook for Windows 10 build 10525.
[String/UUID change made/needed]:
No
Flags: needinfo?(m_kato)
Attachment #8652152 -
Flags: approval-mozilla-aurora?
| Assignee | ||
Comment 25•10 years ago
|
||
Comment on attachment 8652152 [details] [diff] [review]
Apply crbug/522201
Approval Request Comment
[Feature/regressing bug #]:
N/A
[User impact if declined]:
Sandbox (plugin) doesn't work on Windows 10 insider build (build 10525)
[Describe test coverage new/current, TreeHerder]:
landed on m-c
[Risks and why]:
Too low. Added service hook for Windows 10 build 10525.
[String/UUID change made/needed]:
No
Attachment #8652152 -
Flags: approval-mozilla-beta?
Comment 26•10 years ago
|
||
About the test coverage, the fix was also tested by the Chrome team (they had a crash that was also fixed by this patch)
Comment 27•10 years ago
|
||
Comment on attachment 8652152 [details] [diff] [review]
Apply crbug/522201
FF41 does not officially support win64 builds yet, however we do want our end-users to still use, test and identify issues. It seems like a good idea to uplift to Aurora42 and Beta41.
Attachment #8652152 -
Flags: approval-mozilla-beta?
Attachment #8652152 -
Flags: approval-mozilla-beta+
Attachment #8652152 -
Flags: approval-mozilla-aurora?
Attachment #8652152 -
Flags: approval-mozilla-aurora+
status-firefox41:
--- → affected
Comment 28•10 years ago
|
||
Comment 29•10 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•