Bug 1196403 - Apply crbug/522201 to support Windows 10 build 10525. r=bobowen, a=ritu